# pkg/mls/api/v1/service.go
@@ -17,6 +17,7 @@ import (
 	mlsv1 "github.com/xmtp/xmtp-node-go/pkg/proto/mls/api/v1"
 	"github.com/xmtp/xmtp-node-go/pkg/topic"
 	"github.com/xmtp/xmtp-node-go/pkg/tracing"
+	"github.com/xmtp/xmtp-node-go/pkg/types"
 	"github.com/xmtp/xmtp-node-go/pkg/utils"
 	"go.uber.org/zap"
 	"google.golang.org/grpc/codes"
@@ -294,7 +295,7 @@ func (s *Service) SendWelcomeMessages(ctx context.Context, req *mlsv1.SendWelcom
 			insertSpan, insertCtx := tracer.StartSpanFromContext(ctx, "insert-welcome-message")
 			insertLogger := tracing.Link(insertSpan, log)
 			insertLogger.Info("inserting welcome message", zap.String("client_ip", ip), zap.Int("message_length", len(input.GetV1().Data)))
-			msg, err := s.store.InsertWelcomeMessage(insertCtx, input.GetV1().InstallationKey, input.GetV1().Data, input.GetV1().HpkePublicKey)
+			msg, err := s.store.InsertWelcomeMessage(insertCtx, input.GetV1().InstallationKey, input.GetV1().Data, input.GetV1().HpkePublicKey, types.WelcomeCiphersuiteFromProto(input.GetV1().Ciphersuite))
 			insertSpan.Finish(tracing.WithError(err))
 			if err != nil {
 				if mlsstore.IsAlreadyExistsError(err) {
@@ -311,6 +312,7 @@ func (s *Service) SendWelcomeMessages(ctx context.Context, req *mlsv1.SendWelcom
 						InstallationKey: msg.InstallationKey,
 						Data:            msg.Data,
 						HpkePublicKey:   msg.HpkePublicKey,
+						Ciphersuite:     input.GetV1().Ciphersuite,
 					},
 				},
 			})
